# freeverb-rs

./: .git-blame-ignore-revs  .gitignore  Cargo.toml  LICENSE  README.md
app_gtk/: Cargo.toml
app_gtk/src/: main.rs  portaudio_thread.rs
app_juce/: .gitignore  freeverb.jucer
app_juce/JuceLibraryCode/: AppConfig.h  JuceHeader.h
audio_module/: Cargo.toml
audio_module/src/: lib.rs  parameter.rs
clib/: .gitignore  Cargo.toml  cbindgen.toml  test.cpp
clib/src/: lib.rs
crates/audio_module/: Cargo.toml
crates/audio_module/src/: command.rs  lib.rs  module.rs  parameter.rs  processor.rs  string_converter.rs  value_converter.rs
crates/clib/: Cargo.toml  build.sh
crates/freeverb/: Cargo.toml
crates/freeverb/src/: all_pass.rs  freeverb.rs
crates/freeverb_module/: Cargo.toml
crates/freeverb_module/src/: lib.rs
examples/app_gtk/: Cargo.toml
examples/app_gtk/src/: audio_thread.rs  gtk_parameter_slider.rs  gtk_parameter_toggle.rs  main.rs
examples/app_juce/: freeverb.jucer
examples/app_juce/Source/: Main.cpp  MainComponent.cpp  MainComponent.h
examples/wasm/: .gitignore  Cargo.toml  README.md  build-wasm.sh  package-lock.json  package.json  webpack.config.js
examples/wasm/public/: freeverb-processor.js  index.js
examples/wasm/src/: lib.rs
freeverb/src/: all_pass.rs  comb.rs  delay_line.rs  lib.rs
freeverb_module/: Cargo.toml
freeverb_module/src/: lib.rs
src/audio_module/: Cargo.toml
src/audio_module/src/: lib.rs  parameter.rs
src/clib/: Cargo.toml
src/clib/src/: lib.rs
src/freeverb/: Cargo.toml
src/freeverb/src/: all_pass.rs  comb.rs  delay_line.rs  float.rs  freeverb.rs  lib.rs  tuning.rs
src/freeverb_module/: Cargo.toml
src/freeverb_module/src/: lib.rs
wasm/: .gitignore  Cargo.toml  build.sh  index.html  index.js  package-lock.json
wasm/src/: lib.rs
