[package]
name = "freeverb"
version = "0.2.0"
edition = { workspace = true }
authors = { workspace = true }
readme = { workspace = true }
repository = { workspace = true }
license = { workspace = true }
description = "A Rust implementation of the Freeverb algorithm"
documentation = "https://docs.rs/freeverb"
keywords = ["audio", "dsp", "effect", "reverb", "stereo"]

[dependencies]
